--- a/internal/hypertext/templates/index.gohtml
+++ b/internal/hypertext/templates/index.gohtml
@@ -17,24 +17,33 @@
 <body>
 <main class='container'>
 
-<h1 data-test-id='greeting'>Hello, {{.Name}}!</h1>
+	<article>
+		<h1>Lists</h1>
+      {{- /* gotype:github.com/crhntr/muxt-template-module-todo/internal/hypertext.IndexData */ -}}
 
-{{- define "GET /{$} Index(ctx)" -}}
-  {{template "index.gohtml" .}}
-{{- end -}}
+		<ul id='lists'>
+	    {{- range .Lists}}
+				<li><a href='/list/{{.ID}}'>{{.Name}}</a></li>
+	    {{end -}}
+		</ul>
+	</article>
 
+	<article>
+		<div hx-trigger='load' hx-get='/list/create'></div>
+	</article>
 </main>
 {{block "footer" 0}}
 <footer class='container'>
 	<ul>
 		<li>
-			<a href='/' hx-boost='true' hx-select='main' hx-target='main'>Welcome</a>
-		</li>
-		<li>
-			<a href='/about' hx-boost='true' hx-select='main' hx-target='main'>About</a>
+			<a href='/' hx-boost='true' hx-select='main' hx-target='main'>Lists</a>
 		</li>
 	</ul>
 </footer>
 {{end}}
 </body>
 </html>
+
+{{- define "GET /{$} Index(ctx)" -}}
+  {{template "index.gohtml" .}}
+{{- end -}}
