--- a/internal/hypertext/templates/index.gohtml
+++ b/internal/hypertext/templates/index.gohtml
@@ -19,12 +19,10 @@
 
 	<article>
 		<h1>Lists</h1>
-      {{- /* gotype:github.com/crhntr/muxt-template-module-todo/internal/hypertext.IndexData */ -}}
-
 		<ul id='lists'>
-	    {{- range .Lists}}
+	    {{- range .Result.Lists}}
 				<li><a href='/list/{{.ID}}'>{{.Name}}</a></li>
-	    {{end -}}
+	    {{end}}
 		</ul>
 	</article>
 
@@ -44,6 +42,6 @@
 </body>
 </html>
 
-{{- define "GET /{$} Index(ctx)" -}}
+{{- define "GET /{$} Index(ctx)"}}
   {{template "index.gohtml" .}}
-{{- end -}}
+{{- end}}
