--- a/internal/hypertext/templates/task.gohtml
+++ b/internal/hypertext/templates/task.gohtml
@@ -1,46 +1,46 @@
-{{- define "task" -}}
-  {{- if not .CompletedAt.Valid -}}
+{{- define "task"}}
+  {{- if not .CompletedAt.Valid}}
 		<li data-task-id='{{.ID}}'
 		    style='display: flex; justify-content: space-between;'>
 			<span>{{.Description}}</span>
 			<button hx-target='closest [data-task-id]' hx-patch='/task/{{.ID}}/complete'>Done</button>
 		</li>
-	{{- else -}}
+	{{- else}}
 	  <li data-task-id='{{.ID}}'
 	      style='display: flex; justify-content: space-between;'
 	      data-tooltip='Completed at {{.CompletedAt.Time}}'>
 		  <span><s>{{.Description}}</s></span>
 	  </li>
-	{{- end -}}
-{{- end -}}
+	{{- end}}
+{{- end}}
 
-{{- define "PATCH /task/{id}/complete PatchTaskComplete(ctx, id)" -}}
-	{{- template "task" .Task -}}
-{{- end -}}
+{{- define "PATCH /task/{id}/complete PatchTaskComplete(ctx, id)"}}
+	{{- template "task" .Result}}
+{{- end}}
 
-{{- define "new task" -}}
+{{- define "new task"}}
 	<form hx-post='/tasks'>
 		<h2>New Task</h2>
-		<input type='hidden' name="ListID" value='{{.List.ID}}'>
+		<input type='hidden' name="ListID" value='{{.Result.List.ID}}'>
 		<label id='list-description-input'>Description
 			<input type='text' name='Description'>
 		</label>
-      {{with .Error}}
+      {{with .Err}}
 				<p class='warning'>{{.}}</p>
       {{end}}
 		<div id='post-task-error'></div>
 		<input type='submit'>
 	</form>
-{{- end -}}
+{{- end}}
 
 {{define "POST /tasks PostTask(ctx, form)"}}
-  {{- if .Error -}}
-    {{- template "new task" . -}}
-  {{- else -}}
-    {{- template "new task" . -}}
+  {{- if .Err}}
+    {{- template "new task" .}}
+  {{- else}}
+    {{- template "new task" .}}
     <ul hx-swap-oob='beforeend: #tasks-list'>
-      {{- template "task" .Task -}}
+      {{- template "task" .Result.Task}}
     </ul>
-  {{- end -}}
+  {{- end}}
 {{end}}
 
